# RPproject_robotic_arm

./: CMakeLists.txt  README.md  package.xml
config/: dh_parameters.yaml
launch/: start_simulation.launch.py
launch/install/: local_setup.sh  setup.sh
launch/log/: latest_build
rviz/: configuration.rviz
src/: robot_invkinematics.cpp
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
urdf/: robotic_arm.urdf
